--- a/index.html
+++ b/index.html
@@ -194,8 +194,12 @@
 										<span class="position">Teachnook-Front End development</span>
 										<p class="date">May 2023 - September 2023</p>
 										<ul>
-											<li>Worked as support for their Internet portal (TPSConnect)</li>
-											<li>Created clone of Amazon.in</li>
+											<li>Gained comprehensive knowledge of Data Science and Machine Learning concepts, including data preprocessing,
+feature engineering, and model evaluation.</li>
+
+											<li>Successfully completed a project to classify Iris flowers into three species (Setosa, Versicolor, Virginica) using
+machine learning algorithms.</li>
+
 											
 										</ul>
 									</div>
@@ -296,10 +300,13 @@
 							<i class="icon-book"></i>
 						</span>
 						<div class="desc">
-							<h3 class="mb-4">My Read Book Shelf</h3>
-							<p><strong>Vanilla JS • Bootstrap</strong></p>
-							<p>Fetches All Read Books from Goodreads using their API. Extracts required data and
-								displays in a blog type page.<br>All without using a Database</p>
+							<h3 class="mb-4">Financial Data Analysis using Power BI</h3>
+							<p><strong> Power BI </strong></p>
+							<p>Conducted comprehensive analysis of financial data and created interactive dashboards using Power BI
+• Designed detailed reports to visualize key financial metrics and performance trends, enabling data-driven
+decision-making.
+• Automated data workflows and provided real-time insights into financial operations, improving efficiency and
+strategic planning.</p>
 						</div>
 					</a>
 				</div>
@@ -309,9 +316,10 @@
 							<i class="icon-terminal"></i>
 						</span>
 						<div class="desc">
-							<h3 class="mb-4">TermFolio</h3>
+							<h3 class="mb-4">Amazon Clone</h3>
 							<p><strong>HTML • CSS • JavaScript</strong></p>
-							<p>A Portfolio Website that is made to look and act like a Terminal.</p>
+							<p>"Amazon Clone" 
+Built an e-commerce web app using HTML, CSS, and JavaScript. Features include user authentication, product browsing, and a shopping cart. Designed a responsive interface and implemented server-side rendering for dynamic content.</p>
 						</div>
 					</a>
 				</div>
@@ -337,10 +345,13 @@
 							<i class="flaticon-circuit-board"></i>
 						</span>
 						<div class="desc">
-							<h3 class="mb-4">Data Transmission with Laser</h3>
-							<p><strong>Arduino</strong></p>
-							<p>A hardware based demonstration of Binary ASCII representation of Text, Sent and Received
-								from one system to another using Laser and Arduino.</p>
+							<h3 class="mb-4">Centralized Health Monitoring System </h3>
+							<p><strong>•HTML •CSS •Javascript •Flask •Raspberry pi</strong></p>
+							<p>Designed and implemented a centralized health monitoring system leveraging Raspberry Pi, sensors, and actuators
+to collect and analyze real-time health data.
+• Integrated multiple sensors (e.g., temperature, heart rate, etc.) to monitor key health parameters and send data to a
+centralized website for visualization and analysis.
+• Developed a web-based interface to display sensor data and ensure user-friendly access to health metrics.</p>
 						</div>
 					</a>
 				</div>
@@ -381,7 +392,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Contact Number</h3>
-							<p><a>+91 9856930077</a></p>
+							<p><a>+91 8624873348</a></p>
 						</div>
 					</div>
 				</div>
@@ -403,7 +414,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Website</h3>
-							<p><a>anishkakade.in</a></p>
+							<p><a>www.linkedin.com/in/anish-kakade-5a8a1b345</a></p>
 						</div>
 					</div>
 				</div>
@@ -449,14 +460,11 @@
 						<p>I like working with new tools and technologies</p>
 						<p class="mt-4"><u>Social Links</u></p>
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft">
-							<li class="ftco-animate"><a href="https://github.com/bunty" target="_blank"><span
+							<li class="ftco-animate"><a href="https://github.com/Anishkakade55" target="_blank"><span
 										class="icon-github"></span></a></li>
-							<li class="ftco-animate"><a href="https://www.linkedin.com/in/bunty/"
+							<li class="ftco-animate"><a href="www.linkedin.com/in/anish-kakade-5a8a1b345"
 									target="_blank"><span class="icon-linkedin-square"></span></a></li>
-							<li class="ftco-animate"><a href="https://stackoverflow.com/users/13870209/bunty"
-									target="_blank"><span class="icon-stack-overflow"></span></a></li>
-							<li class="ftco-animate"><a href="https://instagram.com/bunty" target="_blank"><span
-										class="icon-instagram"></span></a></li>
+							
 						</ul>
 					</div>
 				</div>
@@ -481,10 +489,10 @@
 						<h2 class="ftco-heading-2">Have a Question?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><a><span class="icon icon-phone"></span><span class="text">+92 9957983348</span></a></li>
+								<li><a><span class="icon icon-phone"></span><span class="text">+91 8624873348</span></a></li>
 								<li><a href=""><span
 											class="icon icon-envelope"></span><span
-											class="text">student@gmail.com</span></a></li>
+											class="text">anishkakade24@gmail.com</span></a></li>
 							</ul>
 						</div>
 					</div>
